2004-07-05  Keisuke Nishida  <knishida@open-cobol.org>

	* fileio.c (sort_read): Set field size for varying records.
	(Thanks to Roger While!)

2004-06-12  Keisuke Nishida  <knishida@open-cobol.org>

	* termio.c (display): Display full digits of binary item
	when pretty-display is off, not when binary-truncate is off.

2004-05-21  Keisuke Nishida  <knishida@open-cobol.org>

	* move.c (cob_binary_get_int64): Reimplemented using memcpy.
	(cob_binary_get_int): Call cob_binary_get_int64.
	(cob_binary_set_int): Call cob_binary_set_int64.

2004-05-16  Keisuke Nishida  <knishida@open-cobol.org>

	* common.c (cob_cmp): Compare non-display numeric and alphanumeric
	correctly.

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* termio.c (display_numeric): Leading sign for binary.

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* byteswap.h (COB_BSWAP_32_IA32): Always use bswap.
	(We no longer support i386.)

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* fileio.c (cob_default_error_handle): Set error for status 35.

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* common.c (cob_runtime_error): Flush buffer at the end.

2004-04-07  Keisuke Nishida  <knishida@open-cobol.org>

	* common.h, common.c (cob_table_sort_init, cob_table_sort_init_key)
	(cob_table_sort): New functions.

2004-04-07  Keisuke Nishida  <knishida@open-cobol.org>

	* strings.c (cob_inspect_converting): Do not convert repeatedly.
	(Thanks to Richard Smith <rich@theforest.plus.com>)

2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* screenio.c: #include <ncurses.h>

2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (file_close): FILE *fp = f->file;

2004-03-10  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (cob_sort_init): Use temporary sort file.
	(cob_sort_finish): Delete sort file.
	(cob_open): No filename mapping for SORT files.

2004-03-09  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
